test/spec_vectors/br_if/fail/module_17.wat
(module (func $type-cond-empty-vs-i32 (block (br_if 0))))